force-app/main/default/objects/Objective_Action__c/Objective_Action__c.object-meta.xml
<CustomObject>
    <label>SP Action</label>
    <nameField>
        <label>SP Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SP Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>