force-app/main/default/objects/Objective_Action__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Denotes which actions are being used actively</description>
    <inlineHelpText>Is this SP Action currently being used</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>