force-app/main/default/objects/Objective_Action__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <inlineHelpText>For required Actions, you can optionally specify an effective date that will excuse prior Opportunities from the requirement.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>