force-app/main/default/objects/Objective_Action__c/fields/Exempt_Products__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to allow the Exempt Products list to bypass this Required Action</inlineHelpText>
    <label>Allow Exempt Products to Bypass</label>
    <type>Checkbox</type>
</CustomField>