force-app/main/default/objects/Objective_Action__c/fields/Exempt_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Profiles__c</fullName>
    <inlineHelpText>Profile ID(s) exempt from required Actions. To specify multiple Profile ID&apos;s, use a tilde as a delimiter (e.g. ID1~ID2~ID3)</inlineHelpText>
    <label>Exempt Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>