force-app/main/default/objects/Objective_Action__c/fields/Exempt_Users__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Users__c</fullName>
    <inlineHelpText>User ID(s) exempt from required Actions. To specify multiple User ID&apos;s, use a tilde as a delimiter (e.g. ID1~ID2~ID3)</inlineHelpText>
    <label>Exempt Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>