force-app/main/default/objects/Objective_Action__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Competitive</fullName>
            </value>
            <value>
                <fullName>Competitive Takeaway</fullName>
            </value>
            <value>
                <fullName>Cross Sale</fullName>
            </value>
            <value>
                <fullName>Existing Business</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Existing Customer - Region</fullName>
            </value>
            <value>
                <fullName>Existing Customer - SAM</fullName>
            </value>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>New Prospect</fullName>
            </value>
            <value>
                <fullName>Prior Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>