force-app/main/default/objects/Objective_Action__c/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <formula>Stage_Objective__r.Opportunity_Stage__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stage Name</label>
    <type>Text</type>
</CustomField>