force-app/main/default/objects/Objective_Action__c/fields/Stage_Objective__c.field-meta.xml
<CustomField>
    <fullName>Stage_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup to the Objective this Action is related to.</inlineHelpText>
    <label>SP Objective</label>
    <referenceTo>Stage_Objective__c</referenceTo>
    <relationshipLabel>SP Actions</relationshipLabel>
    <relationshipName>Objective_Action</relationshipName>
    <type>Lookup</type>
</CustomField>