force-app/main/default/objects/Objective_Action__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task Type 1</fullName>
            </value>
            <value>
                <fullName>Task Type 2</fullName>
            </value>
            <value>
                <fullName>Task Type 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>