force-app/main/default/objects/Objective_Action__c/validationRules/SP_Required_to_Advance.validationRule-meta.xml
<ValidationRule>
    <fullName>SP_Required_to_Advance</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Action_Type__c, &apos;Required&apos;) &amp;&amp; ISBLANK(Opportunity_Type__c) &amp;&amp; ISBLANK(Opportunity_Order_Type__c) &amp;&amp; ISBLANK(Opportunity_Order_SubType__c)</errorConditionFormula>
    <errorDisplayField>Action_Type__c</errorDisplayField>
    <errorMessage>Please select at least one Order Type or Order SubType that the required action applies to.</errorMessage>
</ValidationRule>