force-app/main/default/objects/Objective_Action__c/listViews/All_SP_Actions.listView-meta.xml
<ListView>
    <fullName>All_SP_Actions</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Stage_Name__c</columns>
    <columns>Action_Type__c</columns>
    <columns>Exempt_Profiles__c</columns>
    <columns>Stage_Objective__c</columns>
    <columns>Opportunity_Record_Type__c</columns>
    <columns>Opportunity_Type__c</columns>
    <columns>Opportunity_Order_Type__c</columns>
    <columns>Opportunity_Order_SubType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All SP Actions</label>
    <language>en_US</language>
</ListView>